--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+# environment files
+.env
+.env.local
+apps/*/.env
+apps/*/.env.local
+libs/*/.env
+libs/*/.env.local
 
 # compiled output
 dist
