--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
 {
-  "singleQuote": true
+	"trailingComma": "es5",
+	"semi": false,
+	"singleQuote": false,
+	"useTabs": true,
+	"quoteProps": "consistent",
+	"bracketSpacing": true,
+	"arrowParens": "always",
+	"printWidth": 100,
+	"tabWidth": 4
 }
