--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	],
 	"private": true,
 	"dependencies": {
+		"@prisma/client": "5.7.1",
 		"axios": "^1.0.0",
 		"dotenv": "^16.3.1",
 		"express": "~4.18.1",
@@ -46,6 +47,7 @@
 		"lerna": "^8.0.1",
 		"nx": "v17.2.5",
 		"prettier": "^2.8.8",
+		"prisma": "^5.7.1",
 		"ts-jest": "^29.1.0",
 		"ts-node": "10.9.1",
 		"typescript": "~5.2.2"
