--- a/libs/dto/project.json
+++ b/libs/dto/project.json
@@ -16,5 +16,6 @@
 			}
 		}
 	},
-	"tags": ["type:lib", "scope:shared"]
+	"tags": ["type:lib", "scope:shared"],
+	"implicitDependencies": ["shared-utils"]
 }
