--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 	"version": "0.0.0",
 	"license": "MIT",
 	"scripts": {
-		"format": "nx format:write",
+		"format": "nx format:write && prisma format",
 		"lint": "nx run-many -t lint --projects=tag:scope:api",
 		"prepare": "husky install",
 		"build": "nx run-many -t build --projects=tag:scope:api",
-		"serve": "nx run fan-server:serve",
-		"graph": "nx reset && nx graph"
+		"serve": "nx run server:serve",
+		"graph": "nx reset && nx graph",
+		"migrate": "prisma migrate dev --name init"
 	},
 	"workspaces": [
 		"apps/*",
@@ -20,7 +21,8 @@
 		"axios": "^1.0.0",
 		"dotenv": "^16.3.1",
 		"express": "~4.18.1",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"validator": "^13.11.0"
 	},
 	"devDependencies": {
 		"@nx/esbuild": "v17.2.5",
@@ -35,6 +37,7 @@
 		"@types/express": "~4.17.13",
 		"@types/jest": "^29.4.0",
 		"@types/node": "18.16.9",
+		"@types/validator": "^13.11.7",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
 		"esbuild": "^0.19.2",
