Prisma: create artist | works

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
 			"Dto": ["libs/dto/src/index.ts"],
 			"Infra-backend": ["libs/infra-backend/src/index.ts"],
 			"Interactors": ["libs/interactors/src/index.ts"],
+			"Middlewares": ["libs/middlewares/src/index.ts"],
 			"Operators": ["libs/operators/src/index.ts"],
 			"Shared-utils": ["libs/shared-utils/src/index.ts"]
 		}
