--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 	"dependencies": {
 		"@prisma/client": "5.7.1",
 		"axios": "^1.0.0",
+		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "~4.18.1",
 		"tslib": "^2.3.0",
@@ -34,6 +36,8 @@
 		"@nx/workspace": "v17.2.5",
 		"@swc-node/register": "~1.6.7",
 		"@swc/core": "~1.3.85",
+		"@types/body-parser": "^1.19.5",
+		"@types/cors": "^2.8.17",
 		"@types/express": "~4.17.13",
 		"@types/jest": "^29.4.0",
 		"@types/node": "18.16.9",
