--- a/libs/interactors/project.json
+++ b/libs/interactors/project.json
@@ -16,6 +16,6 @@
 			}
 		}
 	},
-	"tags": ["type:lib", "scope:shared"],
+	"tags": ["type:shared"],
 	"implicitDependencies": ["dto", "infra-backend"]
 }
