--- a/libs/shared-utils/tsconfig.lib.json
+++ b/libs/shared-utils/tsconfig.lib.json
@@ -5,6 +5,6 @@
 		"declaration": true,
 		"types": ["node"]
 	},
-	"include": ["src/**/*.ts", "../controllers/src/assets/apiErrors.ts"],
+	"include": ["src/**/*.ts", "src/error/error-msg.ts"],
 	"exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
