--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
 	"private": true,
 	"dependencies": {
 		"@prisma/client": "5.7.1",
+		"@types/jsonwebtoken": "^9.0.5",
 		"axios": "^1.0.0",
+		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "~4.18.1",
+		"jsonwebtoken": "^9.0.2",
 		"tslib": "^2.3.0",
 		"validator": "^13.11.0"
 	},
@@ -39,6 +42,7 @@
 		"@nx/workspace": "v17.2.5",
 		"@swc-node/register": "~1.6.7",
 		"@swc/core": "~1.3.85",
+		"@types/bcrypt": "^5.0.2",
 		"@types/body-parser": "^1.19.5",
 		"@types/cors": "^2.8.17",
 		"@types/express": "~4.17.13",
