--- a/libs/controllers/tsconfig.lib.json
+++ b/libs/controllers/tsconfig.lib.json
@@ -7,5 +7,9 @@
 		"types": ["node"]
 	},
 	"exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-	"include": ["src/**/*.ts", "../shared-utils/src/error/error-msg.ts", "../shared-utils/src/express-js/params.ts"]
+	"include": [
+		"src/**/*.ts",
+		"../shared-utils/src/error/error-msg.ts",
+		"../shared-utils/src/express-js/params.ts"
+	]
 }
