--- a/libs/infra-backend/project.json
+++ b/libs/infra-backend/project.json
@@ -17,5 +17,5 @@
 		}
 	},
 	"tags": ["type:shared"],
-	"implicitDependencies": ["shared-utils", "domain", "dto"]
+	"implicitDependencies": ["shared-utils", "domain"]
 }
