--- a/apps/server/project.json
+++ b/apps/server/project.json
@@ -69,5 +69,5 @@
 		}
 	},
 	"tags": ["type:backend", "scope:api"],
-	"implicitDependencies": ["controllers", "middlewares"]
+	"implicitDependencies": ["interface-back"]
 }
