--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"axios": "^1.0.0",
 		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "~4.18.1",
@@ -55,6 +56,7 @@
 		"@testing-library/react": "14.0.0",
 		"@types/bcrypt": "^5.0.2",
 		"@types/body-parser": "^1.19.5",
+		"@types/cookie-parser": "^1.4.6",
 		"@types/cors": "^2.8.17",
 		"@types/express": "~4.17.13",
 		"@types/jest": "^29.4.0",
