--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,7 @@
 		"skipLibCheck": true,
 		"skipDefaultLibCheck": true,
 		"baseUrl": ".",
+		"esModuleInterop": true,
 		"paths": {
 			"Domain": ["libs/domain/src/index.ts"],
 			"Infra-backend": ["libs/infra-backend/src/index.ts"],
