--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"dotenv": "^16.3.1",
 		"express": "~4.18.1",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "1.4.5-lts.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-router-dom": "6.11.2",
@@ -60,6 +61,7 @@
 		"@types/cors": "^2.8.17",
 		"@types/express": "~4.17.13",
 		"@types/jest": "^29.4.0",
+		"@types/multer": "^1.4.11",
 		"@types/node": "18.16.9",
 		"@types/react": "18.2.33",
 		"@types/react-dom": "18.2.14",
