--- a/libs/shared/tsconfig.lib.json
+++ b/libs/shared/tsconfig.lib.json
@@ -5,11 +5,6 @@
 		"declaration": true,
 		"types": ["node"]
 	},
-	"include": [
-		"src/**/*.ts",
-		"src/error/html-error-msg.ts",
-		"../interface-back/src/assets/jwt.ts",
-		"../interface-back/src/assets/params.ts"
-	],
+	"include": ["src/**/*.ts"],
 	"exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
