api error treatment

--- a/libs/infra-backend/project.json
+++ b/libs/infra-backend/project.json
@@ -17,5 +17,5 @@
 		}
 	},
 	"tags": ["type:shared", "scope:infrastructure", "scope:api"],
-	"implicitDependencies": ["shared"]
+	"implicitDependencies": ["domain"]
 }
