--- a/libs/infra-frontend/project.json
+++ b/libs/infra-frontend/project.json
@@ -17,5 +17,5 @@
 		}
 	},
 	"tags": ["type:shared", "scope:infrastructure", "scope:ui"],
-	"implicitDependencies": ["shared"]
+	"implicitDependencies": ["domain"]
 }
