--- a/libs/interface-back/project.json
+++ b/libs/interface-back/project.json
@@ -17,5 +17,5 @@
 		}
 	},
 	"tags": ["type:shared", "scope:interface", "scope:api"],
-	"implicitDependencies": ["shared", "infra-backend", "domain"]
+	"implicitDependencies": ["infra-backend", "domain"]
 }
